[project]
name = "eps-course"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "acbuie", email = "aidancbuie@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.2.1",
    "mkdocs-material>=9.5.25",
]
